TEST_PROGRAMS/INVALID/04/94.go
package main

// Invalid type
type a
